# seqtk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: bed.rs  dna.rs  fq_check.rs  fqchk.rs  fx_iterator.rs  io.rs  io_utils.rs  lib.rs  nc_comp.rs  qual_map.rs  record.rs  seq.rs  sequence_read.rs  size.rs  stats.rs  sub_cli.rs  subsample.rs  trim.rs  utils.rs
tests/: test_fqchk.rs  test_seq.rs
tests/data/: chr.bed  chr.fasta  chr.fastq  long.fasta  long.fastq  test_cp.fastq
tests/data/fqchk/: result_for_test_cp.txt  result_for_test_fqchk.txt  result_for_test_fqchk2.txt  test_fqchk.fastq  test_fqchk2.fastq
tests/data/seq/: fa2fa_03.fasta  fa2fa_04.fasta  fq2fa_02.fasta  fq2fa_03.fasta  fq2fa_04.fasta  fq2fa_06.fasta  fq2fq_02.fastq  fq2fq_03.fastq  fq2fq_04.fastq  fq2fq_05.fastq  fq2fq_06.fastq
