[package]
name = "seqtk-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yen Yen Wang <wangyenyen.st00g@g2.nctu.edu.tw>"]
description = "Pure rust version of seqtk"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yenyen1/seqtk-rs"
repository = "https://github.com/yenyen1/seqtk-rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.34"
memmap2 = "0.9.5"
ndarray = "0.16.1"
rayon = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"

[[bin]]
name = "seqtk_rs"
path = "src/bin/seqtk_rs_cli.rs"
test = false
bench = false
