[package]
name = "seqtk-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yen Yen Wang <wangyenyen.st00g@g2.nctu.edu.tw>"]
description = "Pure rust version of seqtk"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yenyen1/seqtk-rs"
repository = "https://github.com/yenyen1/seqtk-rs"

[dependencies]
bio = "2.0.3"
clap = { version = "4.5.24", features = ["derive"] }
flate2 = "1.0.35"
ndarray = {version = "0.16.1", features = ["rayon"]}
rand = "0.8.5"
rayon = "1.10.0"

[[bin]]
name = "seqtk_rs"
path = "src/bin/seqtk_rs_cli.rs"
test = false
bench = false
