[package]
name = "seqtk-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yen Yen Wang <wangyenyen.st00g@g2.nctu.edu.tw>"]
description = "Pure rust version of seqtk"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yenyen1/seqtk-rs"
repository = "https://github.com/yenyen1/seqtk-rs"
keywords = ["fastq", "fasta", "bio", "sequence", "NGS"]
categories = ["science::bioinformatics", "science"]
exclude = ["/.github/*", "*.ipynb", "./scripts/*", "examples/*", "tests/"]

[dependencies]
bio = "2.3.0"
clap = { version = "4.5.24", features = ["derive"] }
flate2 = "1.1.2"
rand = "0.9.1"
rayon = "1.10.0"
colored = "3.0.0"

[[bin]]
name = "seqtk_rs"
path = "src/bin/seqtk_rs_cli.rs"
test = false
bench = false

[dev-dependencies]
diol = "0.13.1"

[[bench]]
name = "test1"
harness = false
